organiserade filer, organiserade kod, lade till sida.

--- a/css/Index.css
+++ b/css/Index.css
@@ -2,7 +2,7 @@
 
 body {
   background-color: black;
-  background-image: url("hellsingland_black.jpeg");
+  background-image: url("images/hellsingland_black");
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
