--- a/css/Header_Footer.css
+++ b/css/Header_Footer.css
@@ -34,3 +34,14 @@ header {
 body {
   background-color: black;
 }
+
+footer {
+  margin-top: 50px;
+  text-align: center;
+  color: white;
+  border-top: 1px solid red;
+}
+.Social_media {
+  display: flex;
+  justify-content: center;
+}
