--- a/css/Header_Footer.css
+++ b/css/Header_Footer.css
@@ -8,12 +8,12 @@
 
 h1 {
   font-family: "Jacquard 24", system-ui;
-  font-weight: 400;
   font-style: normal;
+  font-weight: 400;
   font-size: 10 px;
   color: white;
-  margin: 8px;
-  margin-right: ;
+  margin: auto;
+  min-width: 350px;
 }
 ul {
   display: flex;
@@ -23,12 +23,13 @@ ul {
 }
 a {
   color: white;
-  margin-right: 100px;
+  margin-right: 50px;
+  margin-left: 50px;
   text-decoration: none;
 }
 header {
   display: flex;
-  padding: 10px 20px;
+  margin-left: 0px;
   border-bottom: 1px solid red;
 }
 body {
@@ -40,8 +41,41 @@ footer {
   text-align: center;
   color: white;
   border-top: 1px solid red;
+  display: flex;
+  flex-direction: column;
 }
 .Social_media {
   display: flex;
   justify-content: center;
+}
+.Social_media img {
+  width: 20%;
+}
+
+@media screen and (max-width: 350px) {
+  header {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+  }
+  nav {
+    display: flex;
+    max-width: 350px;
+    margin: auto;
+  }
+  a {
+    padding-left: 0px;
+    justify-content: center;
+    margin: 10px;
+  }
+  h1 {
+    margin: auto;
+  }
+
+  ul {
+    padding-left: 0px;
+  }
+  .Copyright {
+    min-width: 350px;
+  }
 }
